        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=15437
        XPath substring-after function is broken

        Test: fast/xpath/substring-after.html

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunSubstringAfter::evaluate): Fix it for real this time, hopefully.



Canonical link: https://commits.webkit.org/20518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26528 268f45cc-cd09-0410-ab3c-d52691b4dbfc